--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,3 +1,19 @@
+span.sorted-asc,
+span.sorted-desc {
+    text-decoration: underline;
+    white-space: nowrap;
+}
+span.sortable {
+    cursor: pointer;
+}
+span.sorted-asc::after {
+    content: " ▲";
+}
+span.sorted-desc::after {
+    content: " ▼";
+}
+
+
 header{
     padding-top: 20px;
     padding-bottom: 20px;
